# petfish_BI_Cli

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  initialization-report.md  install.sh  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/: project-mode.yaml
.opencode/agents-rules/: anti-sycophancy.md  course-skills.md.20260708111643.bak  deploy-ops.md.20260708113617.bak  fish-reflection.md  fish-trail.md  petfish-companion.md  petfish-style.md  research.md.20260708111652.bak  safety-guard.md  series-style-governor.md.20260708111654.bak
.opencode/plugin/: fish-trail-compaction.ts  system-prompt-context-inject.ts  system-prompt-rules.ts  topic-context-filter.ts
.sisyphus/plans/: product-architecture-design.md
configs/: bi_cli.example.yml  bi_cli.yml  policy.yml
docs/: api.md  architecture.md  bi-domain-intelligence.md  council-evaluation.md  council-review-design-test-qa.md  development.md  execution-order.md  gap-analysis.md  plan-analysis-depth.md  plan-config-system.md  plan-model-integration.md  product-deepening-research.md  upgrade-0.1.4-to-0.3.3.md  user-guide.md
mcp/: README.md  connection-checklist.md  mcp-config.example.json
qa/: code-review-checklist.md  test-plan.md
references/: README.md  mock_crocs_xiaohongshu.csv  mock_jd_products.json  mock_rose_10brands.json  mock_rose_report.html  mock_tmall_products.json
references/semantic/: crocs_xiaohongshu.yml  entities.yml  jd_products.yml  rose_10brands.yml  tmall_products.yml
scripts/: integration_test.py
src/petfish_bi_cli/: application.py  domain.py  framework.py  jobs.py  main.py  semantic.py  web.py
tasks/: backlog.md
templates/: bi_report.md.j2
tests/: conftest.py  test_bi_application.py  test_cli.py  test_domain.py  test_framework.py  test_jobs.py  test_observability.py  test_persistence.py
tests/test_agent/: test_retry.py  test_strategy.py  test_tool_factory.py
tests/test_cli/: test_health_web.py
tests/test_compliance/: test_checker.py  test_pii.py
tests/test_config/: test_auto_detect.py  test_circuit_breaker.py  test_directory_sources.py  test_embedding_selector.py  test_few_shot.py  test_field_mapping_resilience.py  test_field_metadata.py  test_framework_settings.py  test_mcp_loader.py  test_model_factory.py  test_p1_p3_features.py  test_prompt_manager.py  test_rag_loader.py  test_settings.py  test_source_registry.py  test_wizard_rag.py
tests/test_data_multi/: test_temporal.py
tests/test_golden/: test_deterministic_cases.py  test_golden_cases.py
tests/test_grounding/: test_claims.py  test_enhanced_validator.py  test_validator.py
tests/test_ingestion/: test_ingestion.py
(+78 files in other folders)
