[project]
name = "petfish-bi-cli"
version = "0.1.0"
description = "AI for BI CLI — processes e-commerce raw data and returns JSON reports via petfishframework agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "petfishframework>=0.1.2",
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["petfishframework[openai]>=0.1.2"]
anthropic = ["petfishframework[anthropic]>=0.1.2"]
mcp = ["petfishframework[mcp]>=0.1.2"]
data = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "python-dotenv>=1.0",
]

[project.scripts]
petfish-bi = "petfish_bi_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petfish_bi_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
