[project]
name = "petfish-bi-cli"
version = "0.1.0"
description = "AI for BI CLI — processes e-commerce raw data and returns JSON reports via petfishframework agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "petfishframework>=1.0.1",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jieba>=0.42",
    "duckdb>=1.5.4",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
openai = ["petfishframework[openai]>=1.0.1"]
anthropic = ["petfishframework[anthropic]>=1.0.1"]
mcp = ["petfishframework[mcp]>=1.0.1"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
vault = ["hvac>=1.0"]
data = ["pandas>=2.0"]
sentiment = ["snownlp>=0.12"]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
petfish-bi = "petfish_bi_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petfish_bi_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires real model API (skipped in CI without API key)",
    "dotenv: test specifically exercises .env file loading",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
